@@ -28,7 +28,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${DOLFIN_CXX_FLAGS}")
 include_directories(${DOLFIN_INCLUDE_DIRS} ${DOLFIN_3RD_PARTY_INCLUDE_DIRS})
 
 # Executable
-add_executable(test_io test.cpp)
+add_executable(test_XMLLocalMeshData XMLLocalMeshData.cpp)
+add_executable(test_XMLMeshValueCollection XMLMeshValueCollection.cpp)
 
 # Target libraries
-target_link_libraries(test_io ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES})
+target_link_libraries(test_XMLLocalMeshData ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES})
+target_link_libraries(test_XMLMeshValueCollection ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES})
